# BigInt2

./: BigInt.sln  BigInt.vcxproj  CMakeLists.txt  Main.cpp  README.md
BigInt/: BigInteger.cpp  BigIntegerDll.cpp  CMakeLists.txt
BigInt_Test/: .Main.cpp.swp  CMakeLists.txt  Main.cpp  is_prime.cpp  print_primes.cpp  windows_mmfile_example.cpp
MemoryMapFile/: CMakeLists.txt  MemoryMapFile.cpp
include/: BigInteger.h  BigIntegerDll.h  MemoryMapFile.h
